# playlist-transfer

./: .env.example  .flake8  .gitignore  BADGES.md  GETTING_STARTED_WITH_TESTS.md  Makefile  README.MD  README_TESTS.md  TESTING.md  TESTING_QUICKSTART.md  TEST_SUITE_OVERVIEW.md  TEST_SUITE_SUMMARY.md  config.json.example  make_executable.sh  mypy.ini  pyproject.toml  pytest.ini  setup_tests.sh
.github/workflows/: ci.yml
playlist_transfer/: __init__.py  main.py  models.py  playlist_transfer.py
playlist_transfer/services/: __init__.py  spotify_service.py  tidal_service.py
tests/: README.md  __init__.py  conftest.py  test_main.py  test_models.py  test_playlist_transfer.py
